err/lovely.testlayers.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/lovely'...
Listing './lib/python3.5/site-packages/lovely/testlayers'...
Compiling './lib/python3.5/site-packages/lovely/testlayers/cass.py'...
***   File "./lib/python3.5/site-packages/lovely/testlayers/cass.py", line 181
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/lovely/testlayers/mongodb.py'...
***   File "./lib/python3.5/site-packages/lovely/testlayers/mongodb.py", line 566
    except Exception, msg:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/lovely/testlayers/mysql.py'...
***   File "./lib/python3.5/site-packages/lovely/testlayers/mysql.py", line 54
    raise ValueError, "Neither mysql nor mysql5 was found"
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/lovely/testlayers/pgsql.py'...
***   File "./lib/python3.5/site-packages/lovely/testlayers/pgsql.py", line 54
    raise ValueError, "pgConfig not found %r" % pgConfig
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/lovely/testlayers/sql.py'...
***   File "./lib/python3.5/site-packages/lovely/testlayers/sql.py", line 94
    raise RuntimeError, "No db directory defined"
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/lovely.testlayers-0.7.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
